compiler/src/test/resources/golden/errors/use_selective_empty.dawn
use foo/bar.{}

pub fn main() -> Unit !io = println("hi")
