compiler/src/test/resources/golden/errors/use_selective_empty.err
error: a selective import needs at least one name
  --> use_selective_empty.dawn:1:5
  |
1 | use foo/bar.{}
  |     ^^^^^^^^^^
  = hint: use `use foo/bar` to import the whole module
